# pyspx

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  build-wheels.sh  pyproject.toml  setup.py
.github/workflows/: python-app.yml
src/pyspx/: bindings.py  build.py  shake256_192s.py
src/sphincsplus/ref/: Makefile  api.h  sign.c
src/spx/: __init__.py  bindings.py  build.py  shake256_192s.py
tests/: test_signing.py
