[build-system]
requires = ["setuptools>=59.6.0", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PySPX"
version = "0.5.0"
authors = [
  { name="Joost Rijneveld", email="contact@sphincs.org" },
  { name="Peter Schwabe", email="contact@sphincs.org" },
  { name="Ruben Gonzalez", email="mail@ruben-gonzalez.de" },
]
description = "Python bindings for SPHINCS+"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    'Topic :: Security :: Cryptography',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication',
    'Programming Language :: Python :: 3',
]
dependencies = ["cffi>=1.0.0"]
